tdf#148198: merge identical hyperlinks of adjacent text ranges on ODF export

The true hyperlink boundaries are available as SwpHints starts/ends, which are used
in DOC(X) export (see SwWW8AttrIter::OutAttrWithRange).

However, I don't see a reasonable way to expose this information to xmloff, so I
decided instead to just merge the identical hyperlink properties of adjacent ranges
into a single hyperlink. This will allow to fix already split hyperlinks saved in
previous versions. The downside is that this disallows to have separate adjacent
identical hyperlinks - I hope that this would not be a real issue.

Change-Id: I901e6035a5e89bc515b5742c6a5f564c77faf05b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137013
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>